# webautotest

./: .env  .env.example  .gitignore  README.md  docker-compose-grid.yml  docker-compose-jpress.yml  pyproject.toml  run_tests.py
.github/: copilot-instructions.md
configs/: __init__.py  config.py  config.yaml  path.py
src/core/: __init__.py  base_page.py  element_locator.py  logger.py  webdriver_manager.py
src/pages/: admin_login_page.py  article_page.py
src/utils/: allure_utils.py  browser_video_recorder.py  captcha_utils.py  file_utils.py  video_recorder.py
tests/: conftest.py
tests/data/: data_loader.py
tests/test_cases/: test_admin_login.py  test_article.py
